@@ -1,3 +1,4 @@
+- MANTA-146 use MAPQ0 mate reads in assembly
 - MANTA-48 use shadow reads for split scoring
 - MANTA-157 improve shadow read filter
 - MANTA-153 fix diploid prior
